[gd_scene load_steps=12 format=3 uid="uid://b47ilftaworuv"]

[ext_resource type="Texture2D" uid="uid://bklesyveoq4go" path="res://assets/grid.jpg" id="1_80nbo"]
[ext_resource type="Script" uid="uid://dyyvqwcikseun" path="res://game.gd" id="1_e2o6t"]
[ext_resource type="PackedScene" uid="uid://ce06p2pe2ubyh" path="res://player.tscn" id="3_fc0e3"]
[ext_resource type="PackedScene" uid="uid://c8gnk3xltpjhn" path="res://hud.tscn" id="4_7jktm"]
[ext_resource type="PackedScene" uid="uid://drugmui5bih5a" path="res://game_over.tscn" id="5_7jktm"]
[ext_resource type="Script" uid="uid://diif46g4wgprn" path="res://game_win.gd" id="6_ryrav"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7jktm"]
size = Vector2(107, 2455)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ryrav"]
size = Vector2(4013, 122)

[sub_resource type="Curve2D" id="Curve2D_fc0e3"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -781, -525, 0, 0, 0, 0, 790, -577, 0, 0, 0, 0, 807, 559, 0, 0, 0, 0, -781, 555, 0, 0, 0, 0, -781, -525)
}
point_count = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7jktm"]
bg_color = Color(0.083392, 0.083392, 0.083392, 0.619608)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ryrav"]
bg_color = Color(0.329106, 0.527741, 0.873161, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Game" type="Node2D"]
texture_repeat = 2
script = ExtResource("1_e2o6t")

[node name="Background" type="CanvasGroup" parent="."]

[node name="Background4" type="CanvasLayer" parent="Background"]
layer = -1
follow_viewport_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="Background/Background4"]
position = Vector2(-1408, 920)
scale = Vector2(1.91531, 1.87653)
texture = ExtResource("1_80nbo")

[node name="Background3" type="CanvasLayer" parent="Background"]
layer = -1
follow_viewport_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="Background/Background3"]
position = Vector2(1408, 920)
scale = Vector2(1.91531, 1.87653)
texture = ExtResource("1_80nbo")

[node name="Background2" type="CanvasLayer" parent="Background"]
layer = -1
follow_viewport_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="Background/Background2"]
position = Vector2(1408, -919)
scale = Vector2(1.91531, 1.87653)
texture = ExtResource("1_80nbo")

[node name="Background" type="CanvasLayer" parent="Background"]
layer = -1
follow_viewport_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="Background/Background"]
position = Vector2(-1408, -919)
scale = Vector2(1.91531, 1.87653)
texture = ExtResource("1_80nbo")

[node name="WorldBorder" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="WorldBorder"]
visible = false
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D3" type="CollisionShape2D" parent="WorldBorder/StaticBody2D"]
position = Vector2(-1954, 41)
shape = SubResource("RectangleShape2D_7jktm")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="WorldBorder/StaticBody2D"]
position = Vector2(1969, 75)
shape = SubResource("RectangleShape2D_7jktm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBorder/StaticBody2D"]
position = Vector2(0, -1131)
shape = SubResource("RectangleShape2D_ryrav")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WorldBorder/StaticBody2D"]
position = Vector2(0, 1242)
shape = SubResource("RectangleShape2D_ryrav")

[node name="Line2D" type="Line2D" parent="WorldBorder"]
points = PackedVector2Array(-1898, -1071, 1915, -1071, 1913, 1177, -1898, 1177, -1898, -1070)
width = 5.0
default_color = Color(0.329106, 0.527741, 0.873161, 1)

[node name="Player" parent="." instance=ExtResource("3_fc0e3")]
unique_name_in_owner = true
collision_layer = 5
collision_mask = 7

[node name="Path2D" type="Path2D" parent="Player"]
curve = SubResource("Curve2D_fc0e3")

[node name="EnemyPath" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-781, -525)
rotation = -0.0330879

[node name="HUD" parent="." instance=ExtResource("4_7jktm")]

[node name="EnemySpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[node name="GameOver" parent="." instance=ExtResource("5_7jktm")]
unique_name_in_owner = true
visible = false

[node name="KillsUI" type="CanvasLayer" parent="."]

[node name="KillsProgressBar" type="ProgressBar" parent="KillsUI"]
unique_name_in_owner = true
offset_left = 425.0
offset_top = 14.0
offset_right = 727.0
offset_bottom = 41.0
theme_override_styles/background = SubResource("StyleBoxFlat_7jktm")
theme_override_styles/fill = SubResource("StyleBoxFlat_ryrav")
max_value = 300.0
show_percentage = false

[node name="KillsLabel" type="Label" parent="KillsUI/KillsProgressBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -8.5
offset_right = 29.0
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "0/300 kills"

[node name="GameWin" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false
script = ExtResource("6_ryrav")

[node name="ColorRect" type="ColorRect" parent="GameWin"]
offset_right = 1153.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.501961)

[node name="WinLabel" type="Label" parent="GameWin"]
offset_left = 425.0
offset_top = 208.0
offset_right = 728.0
offset_bottom = 304.0
theme_override_font_sizes/font_size = 70
text = "you win!!"

[node name="InfoLabel" type="Label" parent="GameWin"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -11.5
offset_right = 25.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "300 pebbles slayed in 0 milliseconds"

[connection signal="game_won" from="." to="GameWin" method="_on_game_game_won"]
[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
